Terceira parte e primeira parte da segunda parte do HTML

--- a/index.html
+++ b/index.html
@@ -42,4 +42,20 @@
             <input type="date" id="data-nascimento" maxlength="2014-12-31" required>
           </div>
 
+           <div>
+            <label for="foto">Foto de perfil</label>
+            <input type="file" id="foto" accept=".jpg .png .jpeg " required>
+          </div>
+        </fieldset>
+
+        <fieldset class="gostos">
+          <legend>Gostos pessoais</legend>
+
+          <div>
+            <label for="color">Cor preferida:</label>
+            <input type="color" id="cor-preferida">
+          </div>
+
+          <div class="checkbox">
+            <h2>Escolha seus estilos musicais favoritos</h2>
 </html>
