Fazendo esse commit de novo poois acho que a primeira tentativa nao deu certo

--- a/index.html
+++ b/index.html
@@ -58,4 +58,34 @@
 
           <div class="checkbox">
             <h2>Escolha seus estilos musicais favoritos</h2>
+
+             <div>
+              <input type="checkbox" id="rap">
+              <label for="rap">Rap</label>
+            </div>
+
+            <div>
+              <input type="checkbox" id="pop">
+              <label for="pop">Pop</label>
+            </div>
+
+            <div>
+              <input type="checkbox" id="sertanejo">
+              <label for="sertanejo">sertanejo</label>
+            </div>
+
+            <div>
+              <input type="checkbox" id="pagode">
+              <label for="pagode">Pagode</label>
+            </div>
+
+            <div>
+              <input type="checkbox" id="rock">
+              <label for="rock">Rock</label>
+            </div>
+
+            <div>
+              <input type="checkbox" id="outros">
+              <label for="outris">Outros</label>
+            </div>
 </html>
