mais um commit porque sim

--- a/index.html
+++ b/index.html
@@ -88,4 +88,37 @@
               <input type="checkbox" id="outros">
               <label for="outris">Outros</label>
             </div>
+
+            <div class="radio">
+              <h2>Você prefere doce, salgado ou ambos?</h2>
+
+              <div>
+                <input type="radio" id="doce" name="gosto" required>
+                <label for="doce">Doce</label>
+              </div>
+
+              <div>
+                <input type="radio" id="salgado" name="gosto">
+                <label for="salgado">Salgado</label>
+              </div>
+              <div>
+                <input type="radio" id="ambos" name="gosto">
+                <label for="ambos">Ambos</label>
+              </div>
+            </div>
+
+            <div>
+              <label for="tamanho">Selecione seu tamanho de camiseta:</label>
+              <select name="tamanho id=" tamanho">
+                <option disabled selected>Selecione...</option>
+                <option value="pp">PP</option>
+                <option value="p">P</option>
+                <option value="m">M</option>
+                <option value="g">G</option>
+                <option value="gg">GG</option>
+                <option value="exg">XGG</option>
+                <option value="exg">EXGG</option>
+              </select>
+
+            </div>
 </html>
