alguns erros que tive que corrigir, como o fechamento das ferramentas HTML

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 
             <div>
               <label for="tamanho">Selecione seu tamanho de camiseta:</label>
-              <select name="tamanho id=" tamanho">
+              <select name="tamanho" id="tamanho">
                 <option disabled selected>Selecione...</option>
                 <option value="pp">PP</option>
                 <option value="p">P</option>
@@ -120,5 +120,17 @@
                 <option value="exg">EXGG</option>
               </select>
 
+               <div>
+              <label for="descricao">Faça uma breve descrição sobre você:</label>
+              <br>
+              <textarea name="descricao" id="descricao" cols="30" rows="10"
+                placeholder="Digite aqui a descrição"></textarea>
             </div>
+        </fieldset>
+
+        <button>Enviar</button>
+      </form>
+    </main>
+  </div>
+</body>
 </html>
